translated 7th and 8th chapters to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -936,7 +936,117 @@
   "c6_17text1":"Колдоо",
   "c6_17text2":"\nСПИД борборунун кызматкерлери, бейөкмөт уюмдар; укук коргоо уюмдары; Акыйкатчы институту; кээ бир эл аралык уюмдар (мисалы, ЕККУ) колдоо көрсөтө алат. Сиз университетке караштуу юридикалык клиникага да жардам сурап кайрылсаңыз болот, бирок алардын баары эле сотто колдоо көрсөтө алышпайт. Мыйзам боюнча сот сизге акысыз адвокат бере алат, бирок бул сиз соттон утуп аласыз деген кепилдикти бербейт.",
   "c6_17text3":"\n\nБейөкмөт уюмдар укуктардын бузулушун документтештирип, мамлекетке жана эл аралык институттарга берген отчетко киргизишет. Бейөкмөт уюмдар арызды туура даярдоого колдоо көрсөтүп, аны Өкмөткө, Жогорку Кеңештин депутаттарына жана Акыйкатчыга жеткире алышат.",
-  "c6_17text4":"\n\nОшондой эле бейөкмөт уюмдар ВИЧ менен ооругандарды жана аларга жардам бергендерди адам укуктары маселелери боюнча окутуп, укуктук колдоо көрсөтүшөт. Маанилүү маалыматты жамааттардагы консультанттардан да алып турсаңыз болот."
+  "c6_17text4":"\n\nОшондой эле бейөкмөт уюмдар ВИЧ менен ооругандарды жана аларга жардам бергендерди адам укуктары маселелери боюнча окутуп, укуктук колдоо көрсөтүшөт. Маанилүү маалыматты жамааттардагы консультанттардан да алып турсаңыз болот.",
+
+
+  "c7_text1": "Үмүтүңүз үзүлүп, кайгыга батып турсаңыз да, үй-бүлөңүз же жакындарыңыз сизди жакшы көрөрүн, сиз үчүн тынчсызданып жатканын жана сизге колдоо көрсөтүүгө даяр экенин унутпаңыз",
+  "c7_text2": "Кыргыз Республикасынын жарандарынын арасында ВИЧ илдети биринчи жолу аялдан аныкталган. 1997-жылы ВИЧ инфекциясынын экинчи учуру катталган. 23 жаштагы С. аттуу аял ВИЧке чалдыкканын кош бойлуу кезинде, 20-аптада билген. Келин катуу ыйлап, көптөн бери күткөн наристесинин ден соолугу үчүн абдан тынчсызданган. Жада калса, баласы ВИЧ менен төрөлбөшү үчүн бойдон алдырууга да даяр эле.",
+  "c7_text3": "Жолдошу (анда ВИЧ аныкталган эмес) аялына абдан катуу колдоо көрсөткөн, ал “Мен аялымды жакшы көрөм жана аны таштабайм”, - деп айткан. Экөө жагдайды талкуулап отуруп, баланы сактап калуу чечимине келишкен. Ал кезде ВИЧке чалдыккан энеден балага вирусту жуктуруп албоо үчүн алдын алуунун натыйжалуу ыкмалары чыга элек болчу.",
+  "c7_text4": "Республикалык СПИД борборунун адистери Орусиядагы кесиптештери менен кеңешүүнү чечишкен. Ошол кезде ВИЧ-позитивдүү эне үчүн бир гана АЗТ (азидотимидин) деген дары бар болчу. Орусиялык адистер ошол дарыны акчасын албай эле жеткирип беришкен.",
+  "c7_text5": "Ымыркай дени сак төрөлдү. Жубайлар чакан бизнес менен алектенип, ынтымактуу жана бактылуу өмүр сүрүп жатышат. Бала мээримдүү ата-эненин курчоосунда чоңоюп, үй-бүлөнүн сүймөнчүктүү эркесине айланды.",
+
+  "c7_1text1":"Эмнелерди унутпаш керек?",
+  "c7_1text2":"Иммундук системанын клеткалары (лимфоциттер) адамдын организмин жугуштуу оорулардан, ошондой эле залалдуу шишиктерден коргоодо чоң роль ойнойт.",
+  "c7_1text3":"ВИЧ адамдын организмине киргенде, ал иммундук системанын клеткаларына чабуул коёт. Бул клеткаларды жардамчы Т-лимфоциттер (же СД4 клеткалары) деп да атап коюшат.",
+  "c7_1text4":"ВИЧ ВИЧ-инфекциясы деп аталган ооруну пайда кылат. Бейтапта оор жугуштуу же онкологиялык оорулар пайда болгон ВИЧ-инфекциясынын баскычы СПИД деп аталат.",
+  "c7_1text5":"Эгерде адам дарыланбаса, ВИЧ ушунчалык көп сандагы Т-лимфоциттерин талкалагандыктан, алар организмди коргой албай калышат. Ошондуктан иммунитети начар адамда инфекциялык же онкологиялык оорулар пайда болот.",
+
+  "c7_2text1":"ВИЧ менен ооруган адамдардын спецификалык жугуштуу оорулары оппортунисттик инфекциялар (ОИ) же оппортунисттик оорулар (ОО) деп аталат. Бул оорулар иммунитети күчтүү адамдарда өнүкпөйт.",
+  "c7_2text2":"ВИЧке чалдыккан адамдарды антиретровирустук дарылар менен өз убагында жана туура дарылаганда (дарылардын дозасын катуу сактап, дарылоону үзгүлтүккө учуратпаш керек) мындай адамдарда СПИД өнүкпөйт, ошондой эле оппортунисттик инфекциялар да болбойт. ",
+  "c7_2text3":"ВИЧке чалдыккан адам үчүн ВИЧ-инфекциясынын алдын алуу өтө маанилүү, себеби ал ВИЧтин башка түрүн кайра жуктуруп алышы мүмкүн, бул болсо оорунун өтө оор түрүндө өтүшүнө шарт түзөт. Профилактика жыныстык жол менен жуккан илдеттердин жана кан аркылуу жугуучу инфекциялардын (мисалы, вирустук гепатиттерди) да алдын алуу үчүн маанилүү.",
+
+  "c7_3text1":"ВИЧ-инфекциясы 3 гана жол менен жугат:",
+  "c7_3text2":"- ВИЧ-инфекциялуу кан аркылуу, ийнелерди жана башка медициналык аспаптарды бирге колдонгондо;",
+  "c7_3text3":"- корголбогон (презервативсиз) жыныстык катнаш аркылуу;",
+  "c7_3text4":"- ВИЧ-позитивдүү энеден балага кош бойлуулук маалда, төрөт жана эмчек эмизүү учурунда.",
+  "c7_3text5":"ВИЧ-инфекциясынын байланыштан кийинки профилактикасы (БКП) – ВИЧ-инфекциясын жуктуруп алуу ыктымалдуулугу бар болгон кырдаалдан кийин (мисалы, ВИЧ-позитивдүү адам менен корголбогон жыныстык катнаштан кийин же бир ийне менен баңгизатты колдонгондо) вирустун алдын алуу үчүн чукул медициналык чара.",
+  "c7_3text6":"Байланышка чейинки профилактика (БЧП) – бул вирусту жуктуруп алуу тобокелдиги жогору болгон учурларда анын алдын алуу. Мында ВИЧти жуктуруп албоо үчүн дени соо адамдар антиретровирустук дарыларды профилактика максатында ичишет. БЧПны кээде түгөйлөрдүн биринде ВИЧ-инфекциясы бар болсо жана ал АРТ ичпесе, же вирустук жүктүн деңгээли түшпөй жатканда анын өнөктөшү колдонот.",
+
+  "c7_4text1":"Эгер мага ВИЧ-статусум оң чыкканын айтышса, эмне кылышым керек?",
+  "c7_4text2":"ВИЧ-инфекциясын кандай жол менен жуктуруп алганыңызды ойлонуп, өз тандооңузду жасашыңыз керек – жашоо кандай болсо, ошондой уланта бересизби же аны жакшы жагына өзгөрткүңүз келеби? ВИЧ-инфекциясын дарылоочу дарылар бар.",
+  "c7_4text3":"Үй-бүлөлүк жашооңуз тууралуу ойлонуп, жоопкерчиликтүү чечим кабыл алышыңыз керек. ВИЧ-инфекциясынын болушу жыныстык жашоо ушуну менен бүттү дегенди билдирбейт, үй-бүлө куруу жана дени сак балалуу болуу мүмкүнчүлүгүн чектебейт, бирок жакын адамга/жыныстык өнөктөшкө вирусту жуктуруп алуу тобокелдиги бар экенин эстен чыгарбай, бардык коркунучтарды туура баалаш керек. АРТ дарыларын мүмкүн болушунча эрте баштап, коргоочу каражаттарды (презервативди) колдонуп, кош бойлуулукту иммундук статусуңузга (вирустук жүктүн деңгээлине) жараша пландаштыруу маанилүү.",
+
+  "c7_5text1":"ВИЧ статусуңузду жакын адамыңызга/жыныстык өнөктөшүңүзгө ачык айтуу – бул да сиз кабыл алышыңыз керек болгон маанилүү жана жооптуу чечим.",
+  "c7_5text2":"Антиретровирустук терапиянын (АРТ) жардамы менен ВИЧке чалдыккандар узак жана жемиштүү өмүр сүрө алышат. Бул үчүн:",
+  "c7_5text3":"дарыгердин айткандарын так аткаруу менен АРТны узак убакыт ичиш керек;",
+  "c7_5text4":"аракечтик же баңгилик, кургак учук ж.б. болгондо, АРТ менен бирге тийиштүү дарылануудан өтүү үчүн адистерге кайрылыш керек",
+  "c7_5text5":"мүмкүн болсо, сасык тумоо, вирустук гепатит сыяктуу инфекциялардын алдын алуу үчүн эмдөөдөн өтүңүз (дарыгердин көрсөтмөсү боюнча);",
+
+  "c7_6text1":"жаман адаттардан баш тартыңыз же аларды олуттуу түрдө чектеңиз (мисалы, тамеки тартуу);",
+  "c7_6text2":"туура тамактанууга өтүп, таза суу ичиңиз;",
+  "c7_6text3":"күн тартибин туура уюштуруп, өз убагында иштеп, эс алганды унутпай, сергек жашоого өтүңүз. ",
+  "c7_6text4":"ВИЧ-инфекциясы жок адамга караганда ВИЧке чалдыккан адам үчүн ар кандай жугуштуу оору алда канча кооптуу экенин унутпаңыз, ошондуктан алдын алуу чараларын көрүшүңүз керек, анткени ВИЧти өнөктөшүңүзгө жугузгандан тышкары, жыныстык жол менен да, ийне аркылуу да кошумча ооруну жуктуруп алышыңыз ыктымал.",
+
+  "c7_7text1":"ВИЧке чалдыккан адамдар ВИЧтин башка түрүн кайра жуктуруп алышы мүмкүн экенин эстен чыгарбашы керек, бул алардын ден соолугуна чоң коркунуч жаратат.",
+  "c7_7text2":"Сиз менен жыныстык катнашта болгон же ийнени чогуу колдонгон адамдар алар да ВИЧти жуктуруп алышы мүмкүн экенин биле бербеши ыктымал. Аларга өз убагында дарыланып, ден соолугун жана өмүрүн сактап калуу үчүн ВИЧке тест тапшырууну сунуш кылуу керек.",
+  "c7_7text3":"Жакындарыңызга ВИЧ-статусту ачык айтуунун артыкчылыктары",
+  "c7_7text4":"Ооруңузду жашырып, дары-дармекти катып ичүүнүн кереги жок болот – статусуңуз эң ыңгайсыз учурда (мисалы, ата-энеңиз сизди үйлөндүрөйүн деп чечти, же аялыңыздын боюнан бүттү дейли) ачыкка чыгып калат деп коркпой, тынч жана ачык жашайсыз. ",
+
+  "c7_8text1":"ВИЧ инфекциясын жуктуруп алуу коркунучун азайтуу менен жакын адамыңызды/жыныстык өнөктөшүңүздү коргой аласыз, өзүңүздү анын алдында күнөөлүү сезип жашабайсыз же аны алдагандай болбойсуз.",
+  "c7_8text2":"Сиз статусту кабыл алуу этабында, АРТ ала баштаганда да, башка оорулар пайда болгон учурда, оор турмуштук кырдаалдарда (мисалы, статусуңузду жакын адамдарыңызга айтканда) медициналык, коомдук уюмдардан да, жакын чөйрөңүздөн да колдоо табасыз.",
+  "c7_8text3":"Сиз жакын мамилелерди баштоо же улантуу мүмкүнчүлүгүн, үй-бүлө куруу, пландаштыруу жана балалуу болуу маселелерин ачык талкуулай аласыз.",
+  "c7_8text4":"Башка адамды ВИЧ-инфекциясын жуктуруп алуу коркунучуна кептегени үчүн кылмыш жоопкерчилиги каралган, мындан коркпосоңуз болот, себеби өнөктөшүңүз жыныстык мамилени улантуу тууралуу чечимди өзү кабыл алат.",
+
+  "c7_9text1":"ВИЧ-инфекциясынын диагнозу жашооңузда бир нерсе өзгөрүш керек дегенди билдиреби?",
+  "c7_9text2":"\nООБА,",
+  "c7_9text3":"себеби ВИЧке чалдыксаңыз, өзүңүздү алсыз жабырлануучу катары эмес, кырдаалды өз колуна алган кожоюн катары сезишиңиз керек. ВИЧ жана СПИД жөнүндө, ден соолукту сактоонун жолдору, дарылоо тууралуу көбүрөөк маалымат алыңыз. Өз укуктарыңызды жана аларды кантип коргой алаарыңызды билишиңиз керек.",
+  "c7_9text4":"\n\nООБА,",
+  "c7_9text5":" себеби физикалык жана руханий саламаттыгыңызга азыртан кам көрө башташыңыз керек. Тамекини таштаганга аракет кылыңыз, алкоголдук ичимдиктерди азайтыңыз, баңгизат көз карандуулугунан дарыланыңыз. Туура тамактанууга өтүңүз. Стресстен алыс болуп, уйкудан калбай, эс алып, таза абада көбүрөөк сейилдеп, көңүл ачып, адамдар менен байланышты үзбөңүз.",
+  "c7_9text6":"\n\nООБА,",
+  "c7_9text7":"себеби жыныстык өнөктөшүңүздүн жана башка адамдардын ВИЧти жуктуруп алуусуна жол бербөө сиздин колуңузда. Ал үчүн жыныстык катнаш болгон сайын презервативди туура колдонушуңуз керек. Жыныстык өнөктөшүңүз ВИЧ статусуңузду билүүгө тийиш.",
+
+  "c7_10text1":"\nООБА,",
+  "c7_10text2":" себеби ВИЧ-инфекциясы бар аял жаңы төрөлгөн баласына вирусту жуктуруп албоо үчүн кошумча чараларды көрүшү керек. ВИЧ энеден балага кош бойлуулук, төрөт жана баланы эмизүү учурунда жугат. Кош бойлуу аялга жана ымыркайга төрөттөн кийин дароо АРТ дарыларын дайындоо ВИЧтин жугушун алдын алат.",
+  "c7_10text3":"\n\nЖОК,",
+  "c7_10text4":"себеби кан менен байланышкан кээ бир медициналык кызматтарды кошпогондо, өз адистигиңиз боюнча ишиңизди уланта бересиз.",
+  "c7_10text5":"\n\nЖОК,",
+  "c7_10text6":"себеби туугандарыңыз, досторуңуз, кошуналарыңыз кадыресе күнүмдүк тиричиликте вирусту жуктуруп алышы мүмкүн эмес (эгерде сиз алар менен жыныстык катнашта болбосоңуз, бир ийнени чогуу колдонбосоңуз). Ошондуктан ар бир адамга диагнозуңузду айтып чыгуунун кажети жок.",
+  "c7_10text7":"\n\nЖОК,",
+  "c7_10text8":" себеби ВИЧ-инфекциясы окуудан, жумуштан жана көңүл ачуудан, сүйүүдөн жана жыныстык катнаштан, өз пландарыңыздан жана кызыкчылыктарыңыздан баш тартууга себеп эмес.",
+
+
+  "c8_text1":"1995-жылы америкалык Тимоти Браун (Timothy Brown) аттуу адамда ВИЧ аныкталган, 2007-жылдан бери ал дүйнөдө СПИДден айыгып кеткен жалгыз адам (азырынча) деп аталып жүрөт  Тимоти Браунга эки жолу өлөсүң деп айтышкан – биринчи жолу 1995-жылы ВИЧ диагнозу коюлганда, андан кийин 2006-жылы ",
+  "c8_text2":"дарыгерлер лейкемия диагнозун койгондо да ушинтип айтышкан. Жилик чучугун алмаштыруу операциясынан кийин Тимоти СПИДден айыгып кеткен. Операция Берлиндеги медициналык клиникада өткөн. Ошондуктан аны “берлиндик бейтап” деп атап коюшкан. ",
+
+  "c8_1text1":"Эгерде балаңыз ВИЧ-инфекциясын жуктуруп алса",
+  "c8_1text2":"Кыргыз Республикасында ВИЧке чалдыккан 15 жашка толо элек 700дөн ашык бала жана 18 жашка чыга элек 199 өспүрүм катталган (2021-жылдын 1-апрелине карата маалымат).",
+  "c8_1text3":"\n\nАРТ алган балдар өздөрүн жакшы сезип, физикалык жана акыл-эси жагынан ВИЧке чалдыкпаган балдардай эле чоңоюшат.",
+  "c8_1text4":" Балдар АРТ дарыларын мүмкүн болушунча тезирээк иче баштап, дарыгердин бардык көрсөтмөлөрүн так аткарганы маанилүү",
+  "c8_1text5":"\n\nВИЧке чалдыккан балдардын көбү азыр өспүрүм куракта жана өз статусун билишет. Статусун биле электери болсо ата-энесинен эмне үчүн күндө дары ичип жатканын, курбулары болсо дары ичпей эле жүргөнүн сурашат.",
+  "c8_1text6":"\n\nБалаңыздын статусун кабыл алуу",
+  "c8_1text7":"Балаңыздын ВИЧ-статусун мүмкүн болушунча эртерээк билүүгө аракет жасаңыз.",
+  "c8_1text8":"ВИЧ-инфекциясынын диагнозун коюуда кандайдыр бир каталарга жол берилбейт. Диагноз көп жолу такталып, баланын ВИЧ-статусу толук тастыкталгандан кийин гана ата-энеге маалымдалат.",
+
+  "c8_2text1":"Баланы текшерген дарыгер менен кеңешиңиз. Ата-эне кааласа облустук же республикалык СПИД борборунан консультация алса болот.",
+  "c8_2text2":"Сиз балдарынын ВИЧ статусун кабыл алган ата-энелер менен жолугуп, сүйлөшүп көрсөңүз болот, алар сизге статусту кабыл алууга жардам беришет.",
+  "c8_2text3":"Бейтапканадан, бейөкмөт уюмдан же бул тиркемеден (“Бейтаптын мектеби”) атайын окуудан өтүңүз. Бул ВИЧ ден соолукка кандай таасир тийгизгенин; эмне үчүн АРТ дарыларын ичиш керектигин жана оппортунисттик илдеттердин алдын алуу канчалык маанилүү болгонун түшүнүүгө жардам берет.",
+  "c8_2text4":"ВИЧке чалдыккан балага байкоо жүргүзүп, аны дарылоо",
+  "c8_2text5":"Баланын иммундук системасын сактап калуу үчүн дарылоону мүмкүн болушунча эрте баштоо маанилүү. Дарылоо баланын физикалык жана акыл-эс жагынан өнүгүүсүн камсыз кылат, ошондой эле анын өмүрүн сактап калат.",
+
+  "c8_3text1":"Дарыгердин көрсөтмөлөрүн так аткаруу керек: дарыларды врач жазып берген дозада, дайыма так белгиленген убакытта ичип, дарылоону үзгүлтүккө учуратпай, дарыларды өз убагында алып туруу маанилүү.",
+  "c8_3text2":"Дарыгерге өз убагында барып, зарыл болгон текшерүүлөрдөн өтүп, эмдөөлөрдү алып туруу да маанилүү.",
+  "c8_3text3":"Бала башка ооруларга чалдыкса, аларды дарылоо жолдорун дарыгериңиз менен макулдашыш керек, себеби бул дарылоонун натыйжалуулугуна таасир этиши мүмкүн.",
+  "c8_3text4":"Баланын ден соолугуна байланыштуу кандай гана өзгөрүү болбосун, өз убагында реакция жасап, бул тууралуу ошол замат дарыгерге билдириш керек. Дарылоонун натыйжалуулугун көзөмөлдөш керек, башкача айтканда вирустук жүктүн деңгээлине көз салып туруу маанилүү.",
+
+  "c8_4text1":"Баланы дарыны өз убагында ичип турууга көндүрүү зарыл, муну менен баланы дарыланууга жоопкерчиликтүү мамиле жасоого тарбиялаш керек.",
+  "c8_4text2":"Балага дары ичирип жатканда күч колдонбой, ачууланбай, дары ичкенден баш тартса балага жаза колдонбостон, ага дарынын маанисин түшүндүрүп, ынандырып, тил табышууга аракет кылыңыз. Сабырдуу жана токтоо болуңуз.",
+  "c8_4text3":"ВИЧке чалдыккан балдар 18 жашка чыкканга чейин мамлекеттен 4 000 сом көлөмүндө жөлөк пул алып турушат.",
+
+  "c8_5text1":"ВИЧ менен жашаган бала менен баарлашуу жана аны тарбиялоо",
+  "c8_5text2":"\nБалдар үчүн ата-эне менен физикалык жана эмоционалдык байланышты сактоо маанилүү (баланы мээрим менен сылап, аны менен жайбаракат сүйлөшүп, кам көрүп, көңүл буруу зарыл). ВИЧке чалдыккан баланы тарбиялоо кадимки баланы тарбиялоодон айырмаланбайт. Балага үй-бүлөнүн ичинде жакшы мамиле, теңтуштар менен баарлашуу керек. ВИЧке чалдыккан балдар башка балдар менен ойноп, билим алып, спорт менен машыгып турушу керек. Бала чарчап, күч-кубатын ашыкча коротуп албасын – ушуга көз салып туруу зарыл.",
+  "c8_5text3":"\n\nБалаңызга дос болуңуз, ар кандай көйгөйлөр тууралуу, анын ичинде жыныстык мамилелер, келечектеги кесип, теңтуштар менен болгон мамилелер жөнүндө ачык сүйлөшүңүз.",
+  "c8_5text4":"\n\nБалаңыздын сөзүн бөлбөй, сындабай уга билиңиз, анын оор суроолоруна сабырдуулук менен, жайбаракат жооп берип, теманы жакшы маанай менен талкуулаганга аракет кылыңыз.",
+
+  "c8_6text1":"\nБаланы, анын пикирин, тынчсыздануусун, коркуу сезимин сыйлаңыз. Бала үчүн көйгөйлөрүн бөлүшө турган жана аны уга турган бир адамдын бар болгону өтө маанилүү.",
+  "c8_6text2":"\n\nБалаңызда өзүн-өзү сыйлоо сезимин өрчүтүңүз, бул ага өз кызыкчылыктарын коргоо жөндөмүнө ээ болууга мүмкүндүк берет.",
+  "c8_6text3":"\n\nБаланы мактап, үй тиричилигине жана коомдук иштерге аралаштырыңыз.",
+  "c8_6text4":"\n\nӨспүрүм куракта балдар менен жыныстык катнаш жөнүндө сүйлөшүү зарыл. Кээ бир суроолорго жооп бере албасаңыз, балаңызга психолог же дарыгер менен сүйлөшүүгө уруксат берсеңиз болот.",
+  "c8_6text5":"\n\nКоопсуздук жөнүндө сүйлөшүңүз: жыныстык зомбулук жана андан кантип сактануу керектиги тууралуу; алкоголдук ичимдиктердин, тамекинин жана баңгизаттардын зыяны жөнүндө айтып бериңиз.",
+
+  "c8_7text1":"Балага ВИЧ-статусун угузуу",
+  "c8_7text2":"\n\nБалдарга ВИЧ-статусу тууралуу өтө эрте айтуунун кажети жок, себеби балдар бул тууралуу башкаларга айтып коюшу мүмкүн, бул балдар үчүн да, ВИЧ менен жашаган үй-бүлөлөр үчүн да жагымсыз кесепеттерге алып келиши мүмкүн. Бирок ден соолугуна туура мамиле жасашы керектиги жөнүндө кичине кезинен эле айта баштаса болот.",
+  "c8_7text3":"\n\nБалага статусун 10-12 жашта угузуу сунушталат. Өспүрүмдөргө ВИЧ-статусту ата-эне өзү угузганы туура болот. Эгерде балаңыз менен башынан эле байланышты бекем түптөй алсаңыз, анда балаңызга ВИЧ-инфекциясы, аны жуктуруп алган себептери, ошондой эле ВИЧ менен жашоо жөнүндө айтып бере аласыз.",
+  "c8_7text4":"\n\nБалага ВИЧ-статусун угузууга СПИД борборлорунун дарыгерлери, психологдор, кээ бир окуудан өткөн педагогдор, бейөкмөт уюмдардын өкүлдөрү жардам беришет. Статусун уккандан кийин бала аны кабыл алып, дарылоону үзгүлтүккө учуратпашы үчүн ага психологиялык колдоо керек болот. Бул маселелерде ВИЧ менен жашаган жаш лидерлер да жардамчы болуп бере алышат."
 
 
 }
