--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -935,7 +935,117 @@
   "c6_17text1":"Поддержка",
   "c6_17text2":"\nПоддержку могут оказать сотрудники центров СПИД; НПО; правозащитные организации; институт Омбудсмена; некоторые международные организации (например, ОБСЕ). Вы можете обратиться за помощью в юридическую клинику при университете, но не все они могут оказать поддержку в суде). По закону суд может предоставить Вам бесплатного адвоката, но это не гарантирует успеха. ",
   "c6_17text3":"\n\nНПО документируют нарушение прав и включают это в отчеты государству и международным институтам. НПО могут оказать поддержку в правильной подготовке жалобы и вынести ее на уровень Правительства, депутатов Жогорку Кенеша и Омбудсмена. ",
-  "c6_17text4":"\n\nНПО также проводят обучение ЛЖВ и лиц, оказывающих помощь, по вопросам прав человека, а также предоставляет правовую поддержку. Важную информацию Вы можете также получить от консультантов из сообщества. "
+  "c6_17text4":"\n\nНПО также проводят обучение ЛЖВ и лиц, оказывающих помощь, по вопросам прав человека, а также предоставляет правовую поддержку. Важную информацию Вы можете также получить от консультантов из сообщества. ",
+
+
+  "c7_text1": "Каким бы сильным ни было ваше отчаяние, не забывайте, что ваша семья или ваши близкие любят вас, беспокоятся за вас и готовы вас поддержать.",
+  "c7_text2": "Первые случаи ВИЧ среди граждан Кыргызской Республики были зарегистрированы у женщин. В 1997 году был выявлен второй случай ВИЧ-инфекции. Женщина С. 23 лет была выявлена на 20-й неделе беременности. Она горько плакала, беспокоясь о здоровье своего долгожданного младенца. Она была даже готова прервать беременность, чтобы не",
+  "c7_text3": "допустить, чтобы ребенок родился с ВИЧ. Ее супруг (ВИЧ-негативный) полностью поддержал ее. Он сказал: «Я люблю С. и не оставлю ее». Они обсудили ситуацию и решили сохранить беременность. В то время не было эффективных средств профилактики передачи ВИЧ от ВИЧ-позитивной матери ребенку.",
+  "c7_text4": "Специалисты Республиканского центра СПИД посоветовались с коллегами из России, которые привезли бесплатно единственное существующее тогда лекарство для мамы – АЗТ (азидотимидин).",
+  "c7_text5": "Ребенок родился здоровым. Супруги занимались мелким бизнесом, они были очень дружны и счастливы. Ребенок рос в окружении любящих папы и мамы, а также был любимцем всей семьи.",
+
+  "c7_1text1":"Что следует помнить:",
+  "c7_1text2":"Клетки иммунной системы (лимфоциты) играют важную роль в защите организма человека от инфекционных заболеваний, а также от злокачественных опухолей.",
+  "c7_1text3":"Когда ВИЧ попадает в организм человека, он атакует клетки иммунной системы, которые называются Т-лимфоциты- помощники (или CД4 клетки). ",
+  "c7_1text4":"ВИЧ вызывает заболевание, называемое ВИЧ-инфекцией. Стадию ВИЧ-инфекции, когда у пациента развиваются тяжелые инфекционные или онкологические заболевания, называют СПИД. ",
+  "c7_1text5":"Если не проводится лечение, то ВИЧ разрушает так много Т-лимфоцитов,  , что они не уже не могут защищать организм. Поэтому у человека с ослабленным иммунитетом, развиваются инфекционные или онкологические заболевания. ",
+
+  "c7_2text1":"Специфические инфекционные заболевания у людей с ВИЧ называют оппортунистическими инфекциями (ОИ) или оппортунистическими заболеваниями (ОЗ). Эти заболевания не развиваются у людей с высоким иммунитетом.",
+  "c7_2text2":"При своевременно начатом и правильно проводимом лечении (строгое соблюдение дозы препарата, непрерывности лечения) антиретровирусными препаратами у ВИЧ-позитивных людей СПИД не развивается, не разовьются также и оппортунистические инфекции. ",
+  "c7_2text3":"Для человека с ВИЧ чрезвычайно важна профилактика ВИЧ-инфекции, поскольку он может быть инфицирован другой разновидностью ВИЧ повторно, что утяжелит течение болезни. Профилактика также важна для предупреждения инфицирования ИППП и инфекциями, передаваемыми через кровь (например, вирусными гепатитами). ",
+
+  "c7_3text1":"Существует только 3 пути передачи ВИЧ: ",
+  "c7_3text2":" - через инфицированную ВИЧ кровь, при совместном использовании шприцев и игл и других медицинских инструментов; ",
+  "c7_3text3":" - при незащищенном (без презерватива) полового контакте;",
+  "c7_3text4":" - от ВИЧ-положительной матери ребенку во время беременности, во время родов и при грудном вскармливании.",
+  "c7_3text5":"Постконтактная профилактика ВИЧ-инфекции (ПКП) – это срочная медицинская мера для предупреждения передачи ВИЧ после ситуации, в которой была возможна такая передача (например, после незащищенного полового контакта с ВИЧ-позитивным человеком либо при совместном употреблении наркотика путем инъекций).",
+  "c7_3text6":"Доконтактная профилактика (ДКП) – это предупреждение ВИЧ в случае высокого риска инфицирования. Она предполагает профилактический прием антиретровирусных препаратов здоровыми лицами для предотвращения инфицирования ВИЧ. ДКП иногда применяется в дискордантных парах ЛЖВ, когда один из партнеров инфицирован ВИЧ и не применяет АРТ, либо не достигает подавления вирусной нагрузки. ",
+
+  "c7_4text1":"Что делать, если мне сообщили о положительном ВИЧ-статусе?",
+  "c7_4text2":"Нужно подумать о том, что могло привести к заражению ВИЧ-инфекцией, и сделать свой собственный выбор – продолжить жизнь, как она есть, или изменить ее к лучшему. Для лечения ВИЧ-инфекции есть лекарства.   ",
+  "c7_4text3":"Нужно подумать и принять ответственное решение в отношении своей семейной жизни. Наличие ВИЧ-инфекции не означает прекращение сексуальной жизни, не ограничивает возможности создания семьи и рождения здоровых детей, но нужно помнить и объективно оценивать риск заражения близкого человека/полового партнера. Важно, как можно раньше начать АРТ, и, в зависимости от своего иммунного статуса (ВН), использовать средства защиты (презерватив), планировать беременность.",
+
+  "c7_5text1":"Раскрытие близкому человеку/половому партнеру своего ВИЧ-статуса – также важное и ответственное решение, которое Вам нужно принять.",
+  "c7_5text2":"Благодаря Антиретровирусной терапии (АРТ) люди с ВИЧ могут прожить долгую и плодотворную жизнь, и для этого нужно:",
+  "c7_5text3":"принимать АРТ долгий период времени, соблюдая рекомендации лечащего врача;",
+  "c7_5text4":"при наличии других заболеваний, таких как алкогольная или наркотическая зависимости, туберкулез и др., обращаться к специалистам для получения соответствующего лечения, наряду с АРТ; ",
+  "c7_5text5":"при наличии возможности, пройти вакцинацию для предупреждения таких инфекций, как грипп, вирусный гепатит (по назначению врача);",
+
+  "c7_6text1":"отказаться от вредных привычек либо существенно их ограничить (например, курение);",
+  "c7_6text2":"употреблять здоровую пищу и безопасную питьевую воду;",
+  "c7_6text3":"правильно организовать свой распорядок дня, чередовать работу, отдых и физическую активность.",
+  "c7_6text4":"Помнить, что любая инфекция для человека с ВИЧ значительно опаснее, чем для человека без ВИЧ, поэтому следует строго следовать мерам профилактики передачи ВИЧ, поскольку Вы не только можете инфицировать своих партнеров, но получить дополнительную инфекцию, как половым, так и инъекционным путем.",
+
+  "c7_7text1":"Следует помнить, что ЛЖВ может повторно заразиться и другой разновидностью ВИЧ, что создает большую угрозу его здоровью.",
+  "c7_7text2":"Люди, с которыми Вы имели половые контакты или использовали общие шприцы, также могут быть инфицированы ВИЧ и не знать об этом. Им нужно предложить пройти тестирование на ВИЧ, чтобы своевременно начать лечение, сохранить здоровье и жизнь.",
+  "c7_7text3":"Преимущества раскрытия ВИЧ-статуса своим близким",
+  "c7_7text4":"Вам не нужно скрывать свое заболевание, прятать лекарства – Вы будете жить спокойно и открыто, не боясь, что Ваш статус откроется в самый неподходящий момент (например, родители решили Вас женить, Ваша супруга/партнерша забеременела и др. ситуации).",
+
+  "c7_8text1":"Вы можете защитить своего близкого человека/полового партнера, снизив угрозу инфицирования его ВИЧ, Вам не придется испытывать угрызения совести или обманывать его. ",
+  "c7_8text2":"Вам будет оказана поддержка на этапе принятия статуса, получения АРТ, в случае развития других заболеваний, в сложных жизненных ситуациях (например, при раскрытии Вашего статуса близкому окружению), как со стороны медицинских, общинных организаций, так и со стороны близкого окружения.",
+  "c7_8text3":"Вы можете открыто обсуждать возможность начала или продолжения близких отношений, вопросы создания семьи, планирования и рождения детей.",
+  "c7_8text4":"Вы становитесь защищены от уголовной ответственности за угрозу поставления другого лица в опасность инфицирования ВИЧ, поскольку Ваш партнер сам принимает решение о продолжении сексуальных отношений. ",
+
+  "c7_9text1":"Означает ли диагноз ВИЧ - инфекции, что в Вашей жизни что-то должно измениться?",
+  "c7_9text2":"\nДА, ",
+  "c7_9text3":"потому что при ВИЧ-инфекции следует чувствовать себя хозяином положения, а не беспомощной жертвой. Узнайте больше о ВИЧ и СПИДе, о способах поддержки здоровья, о лечении. Нужно знать о своих правах и как их защищать. ",
+  "c7_9text4":"\n\nДА, ",
+  "c7_9text5":"потому что заботиться о своем физическом и духовном здоровье нужно уже сейчас. Постарайтесь отказаться от курения, сократить потребление алкоголя, пройти лечение наркотической зависимости либо подключиться к ОЗТ. Организуйте полноценное питание. Избегайте стрессов, не отказывайте себе во сне, отдыхе, движении на свежем воздухе, развлечениях и общении. ",
+  "c7_9text6":"\n\nДА, ",
+  "c7_9text7":"потому что в ваших силах не допустить, чтобы ваш половой партнер и другие люди заразились ВИЧ. Для этого следует правильно использовать презерватив при каждом половом контакте. Ваш половой партнер должен знать о вашем ВИЧ-статусе. ",
+
+  "c7_10text1":"\nДА, ",
+  "c7_10text2":"потому что на женщину с ВИЧ ложится дополнительное бремя заботы о предупреждении передачи ВИЧ своему новорожденному ребенку. ВИЧ передается от матери ребенку во время беременности, родов и при кормлении грудью. Назначение АРТ беременной женщине и ребенку сразу после родов позволяет предотвратить передачу ВИЧ. ",
+  "c7_10text3":"\n\nНЕТ, ",
+  "c7_10text4":"потому что вы можете продолжать работать по специальности за исключением некоторых медицинских должностей, связанных с кровью. ",
+  "c7_10text5":"\n\nНЕТ, ",
+  "c7_10text6":"потому что ваши родные, друзья, соседи не могут заразиться от вас при обычных бытовых контактах (если вы не вступаете с ними в половые контакты и не вводите наркотики одним шприцем). Поэтому нет необходимости сообщать им о своем диагнозе.",
+  "c7_10text7":"\n\nНЕТ, ",
+  "c7_10text8":"потому что ВИЧ-инфекция – это не повод отказаться от своих планов и интересов, от учебы, работы и развлечений, любви и секса.",
+
+
+  "c8_text1":"Американец Тимоти Браун (Timothy Brown), у которого в 1995 году был выявлен ВИЧ, с 2007 года является единственным в мире человеком (пока), который исцелился от СПИДа.Тимоти Брауну дважды сообщали, что он умрет – сначала в 1995 году, когда у него обнаружили ВИЧ, а затем в 2006 году,",
+  "c8_text2":"когда врачи выявили у него лейкемию. Он излечился от СПИДа после пересадки ему костного мозга, которое состоялось в медицинской клинике в Берлине, поэтому его называют «берлинский пациент».",
+
+  "c8_1text1":"Если Ваш ребенок инфицирован ВИЧ",
+  "c8_1text2":"В Кыргызской Республике зарегистрировано более 700 детей до 15 лет и 199 подростков до 18 лет, живущих с ВИЧ (01.04.2021 год). ",
+  "c8_1text3":"\n\nДети, которые принимают АРТ, чувствуют себя здоровыми, развиваются физически и умственно так же, как дети без ВИЧ. ",
+  "c8_1text4":"Важно, чтобы дети, как можно раньше, начали прием АРТ и строго выполняли все предписания врача.",
+  "c8_1text5":"\n\nМногие дети уже достигли подросткового возраста и знают о своем статусе. Другие спрашивают у родителей, почему они ежедневно пьют таблетки, когда их сверстники не принимают лекарства.  ",
+  "c8_1text6":"\n\nПринять статус своего ребенка",
+  "c8_1text7":"Как можно раньше узнайте ВИЧ-статус своего ребенка.",
+  "c8_1text8":"Установление диагноза ВИЧ-инфекции исключает какую-либо ошибку. Диагноз уточняется многократно, и родителям сообщают о ВИЧ-статусе ребенка только тогда, когда это полностью подтверждено.",
+
+  "c8_2text1":"Проконсультируйтесь с врачом, который наблюдает ребенка. При желании родителей можно получить консультацию в областном или республиканском центре СПИД. ",
+  "c8_2text2":"Вы можете встретиться с родителями, которые уже приняли ВИЧ-статус своих детей, и они помогут вам справиться с принятием статуса.",
+  "c8_2text3":"Пройдите специальное обучение («Школу пациента») в поликлинике, в НПО или в данном приложении. Это поможет понять, как ВИЧ влияет на здоровье; почему важно получать АРТ и профилактику оппортунистических инфекций.",
+  "c8_2text4":"Наблюдение и лечение ВИЧ-позитивного ребенка ",
+  "c8_2text5":"Важно начать лечение как можно раньше, чтобы сохранить иммунную систему ребенка. Лечение обеспечит нормальное физическое и умственное развитие ребенка, а также сохранит ему жизнь. ",
+
+  "c8_3text1":"Следует строго выполнять назначения врача: принимать лекарства в той дозе, которую прописал врач; постоянно в строго в установленное время, не допуская перерывов в лечении, вовремя получать препараты.",
+  "c8_3text2":"Нужно в установленные сроки посещать врача и проходить необходимые обследования, а также получать прививки.",
+  "c8_3text3":"Любые назначения по сопутствующим заболеваниям ребенка следует согласовывать с лечащим врачом, т.к. это может повлиять на эффективность лечения.",
+  "c8_3text4":"Своевременно реагировать на любые изменения в состоянии здоровья ребенка и сразу же сообщать об этом врачу. Отслеживать эффективность лечения – т.е. снижение вирусной нагрузки.",
+
+  "c8_4text1":"Вовлекать ребенка в процесс приема препаратов, воспитывая у него привычку и ответственность за лечение. ",
+  "c8_4text2":"Быть настойчивым и терпеливым в обеспечении приема препаратов ребенком, не используя насилия или наказаний, а только разъяснения и убеждение.",
+  "c8_4text3":"Детям, которые живут с ВИЧ, назначается государственное пособие в размере 4000 сомов до достижения ими возраста 18 лет. ",
+
+  "c8_5text1":"Общение и воспитание ребенка, живущего с ВИЧ",
+  "c8_5text2":"\nДетям важен физический и эмоциональный контакт с родителями (ласковое поглаживание и спокойная речь, забота, внимание). Воспитание ребенка с ВИЧ ничем не отличается от воспитания обычного ребенка. Ребенку нужны добрые отношения внутри семьи и общение со сверстниками. Дети, живущие с ВИЧ, должны играть, учиться, заниматься спортом вместе с другими детьми. Необходимо следить за тем, чтобы ребенок не уставал и не переутомлялся. ",
+  "c8_5text3":"\n\nБудьте другом своему ребенку, откровенно говорите о разных проблемах, в том числе о сексуальных отношениях, будущей профессии, взаимоотношении со сверстниками.",
+  "c8_5text4":"\n\nУмейте слушать Ваших детей, не обрывая, не критикуя, спокойно реагировать на его непростые вопросы и попытайтесь обсудить их доброжелательно и спокойно. ",
+
+  "c8_6text1":"\nУважайте ребенка, его мнения, тревоги и опасения. Для него важно, чтобы было с кем поделиться своими проблемами и что его выслушают. ",
+  "c8_6text2":"\n\nВырабатывайте у ребенка чувство собственного достоинства, которое позволит ему получить навык отстаивания своих интересов.",
+  "c8_6text3":"\n\nХвалите ребенка, вовлекайте в посильные домашние и общественные дела. ",
+  "c8_6text4":"\n\nВ подростковом возрасте говорить с детьми о сексе. Если Вы не можете ответить на некоторые вопросы, вы можете позволить ребенку обсудить это с психологом либо с лечащим врачом. ",
+  "c8_6text5":"\n\nГоворите о безопасности: о сексуальном насилии и как его можно избежать; об алкоголе, курении и наркотиках. ",
+
+  "c8_7text1":"Раскрытие ВИЧ-статуса ребенку",
+  "c8_7text2":"\n\nНе нужно слишком рано говорить детям о ВИЧ статусе, поскольку дети могут рассказать об этом другим людям, что может привести к нежелательным последствиям, как для детей, так и семей, живущих с ВИЧ. Но можно говорить о правильном отношении к своему здоровью с раннего возраста.",
+  "c8_7text3":"\n\nРаскрытие статуса рекомендуется детям в 10-12 лет. Лучше всего, если открытие ВИЧ статуса подросткам будут делать родители. Если же вам удастся наладить контакт с детьми с самого детства, то вы сможете рассказать ребенку о ВИЧ, о причинах его заражения, а также о жизни с ВИЧ. ",
+  "c8_7text4":"\n\nПомощь в раскрытии ВИЧ-статуса ребенку оказывают врачи центров СПИД, психологи, некоторые обученные педагоги и представители НПО. После раскрытия статуса дети нуждаются в психологической поддержке для принятия своего статуса и формирования приверженности к лечению. В этих вопросах помощь могут оказать молодые лидеры из числа ЛЖВ.  "
 
 }
 
